--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!--=============== CSS ===============-->
     <link rel="stylesheet" href="assets/css/styles.css">
 
-    <title> Hailee's Portfolio </title>
+    <title> Vinit Kumar </title>
 </head>
 
 <body>
@@ -48,11 +48,7 @@
                         </a>
                     </li>
 
-                    <li class="nav__item">
-                        <a href="#skills" class="nav__link">
-                            <i class='bx bx-book'></i>
-                        </a>
-                    </li>
+                    
 
                     <li class="nav__item">
                         <a href="#work" class="nav__link">
