--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                  <div class="home__data">
                         <span class="home__greeting">Hello, I'm</span>
                         <h1 class="home__name">Vinit Kumar</h1>
-                        <h3 class="home__education">Medical Student</h3>
+                        <h3 class="home__education">Doctor of Pharmecy </h3>
                         <div class="home__button">
                             <a download="" href="assets/pdf/vinit_cv.pdf" class="button button--ghost">
                                 Download CV
@@ -88,7 +88,7 @@
                     </div>
 
                 <div class="home__handle">
-                    <img src="assets/img/vinit_3.png" alt="" class="home__img">
+                    <img src="assets/img/vinit_profile-removebg-preview.png" alt="" class="home__img">
                 </div>
 
                 <div class="home__social">
@@ -121,7 +121,7 @@
                             <div class="about__box">
                                 <i class="bx bx-award about__icon"></i>
                                 <h3 class="about__title">Student</h3>
-                                <span class="about__subtitle">curremtly in 3rd year</span>
+                                <span class="about__subtitle">3rd Year Student</span>
                             </div>
                             <div class="about__box">
                                 <i class="bx bx-briefcase-alt about__icon"></i>
@@ -135,7 +135,7 @@
                             </div>
                         </div>
                         <p class="about__description">
-                            Medical and Pharmacy student. I’m skilled in hospital pharmacy, pharmacology, and patient counseling. I’m passionate about helping patients and improving healthcare with my pharmacy knowledge.
+                           Doctor of Pharmecy(Pharma D UnderGraduate). I’m skilled in hospital pharmacy, pharmacology, and patient counseling. I’m passionate about helping patients and improving healthcare with my pharmacy knowledge.
                         </p>
                         <a href="#contact" class="button about__button-contact">Contact Me</a>
                     </div>
@@ -412,7 +412,7 @@
                         <div class="contact__card">
                             <i class="bx bx-mail-send contact__card-icon"></i>
                             <h3 class="contact__card-title">Email</h3>
-                            <span class="contact__card-data">user@gmail.com</span>
+                            <span class="contact__card-data">chorapaala74@gmail.com</span>
                             <a href="mailto:example@domain.com" target="_blank" class="contact__button">
                                 Write Me
                                 <i class="bx bx-right-arrow contact__button-icon"></i>
@@ -430,7 +430,7 @@
                         <div class="contact__card">
                             <i class="bx bxl-twitter contact__card-icon"></i>
                             <h3 class="contact__card-title">Twitter</h3>
-                            <span class="contact__card-data">usertw</span>
+                            <span class="contact__card-data">vinitk8245</span>
                             <a href="https://twitter.com/usertw" target="_blank" class="contact__button">
                                 Write Me
                                 <i class="bx bx-right-arrow contact__button-icon"></i>
