--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
                             <i class="bx bx-mail-send contact__card-icon"></i>
                             <h3 class="contact__card-title">Email</h3>
                             <span class="contact__card-data">chorapaala74@gmail.com</span>
-                            <a href="mailto:example@domain.com" target="_blank" class="contact__button">
+                            <a href="mailto:chorapaala74@gmail.com" target="_blank" class="contact__button">
                                 Write Me
                                 <i class="bx bx-right-arrow contact__button-icon"></i>
                             </a>
@@ -431,7 +431,7 @@
                             <i class="bx bxl-twitter contact__card-icon"></i>
                             <h3 class="contact__card-title">Twitter</h3>
                             <span class="contact__card-data">vinitk8245</span>
-                            <a href="https://twitter.com/usertw" target="_blank" class="contact__button">
+                            <a href="https://twitter.com/vinit8245" target="_blank" class="contact__button">
                                 Write Me
                                 <i class="bx bx-right-arrow contact__button-icon"></i>
                             </a>
