--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
                             <i class="bx bxl-twitter contact__card-icon"></i>
                             <h3 class="contact__card-title">Twitter</h3>
                             <span class="contact__card-data">vinitk8245</span>
-                            <a href="https://twitter.com/vinit8245" target="_blank" class="contact__button">
+                            <a href="https://twitter.com/vinitk8245" target="_blank" class="contact__button">
                                 Write Me
                                 <i class="bx bx-right-arrow contact__button-icon"></i>
                             </a>
