--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         <a href="https://www.linkedin.com/in/vinit-kumar-609923346 " target="_blank" class="home__social-link">
                             <i class="bx bxl-linkedin"></i>
                         </a>
-                        <a href="https://www.instagram.com/vinit_kumar_007/" target="_blank" class="home__social-link">
+                        <a href="https://www.instagram.com/vinit_chauhan_0000?igsh=MXJhaXJta3J2MHVmdA==" target="_blank" class="home__social-link">
                             <i class="bx bxl-instagram"></i>
                         </a>
                         <a href="https://www.facebook.com/vinit.kumar.549222" target="_blank" class="home__social-link">
@@ -430,7 +430,7 @@
                         <div class="contact__card">
                             <i class="bx bxl-twitter contact__card-icon"></i>
                             <h3 class="contact__card-title">Twitter</h3>
-                            <span class="contact__card-data">vinitk8245</span>
+                            <span class="contact__card-data">Vinit Kumar</span>
                             <a href="https://twitter.com/vinitk8245" target="_blank" class="contact__button">
                                 Write Me
                                 <i class="bx bx-right-arrow contact__button-icon"></i>
@@ -503,7 +503,7 @@
                         </a>
                     </li>
                     <li class="footer__social-item">
-                        <a href="#" target="_blank" class="footer__social-link">
+                        <a href="https://www.instagram.com/vinit_chauhan_0000?igsh=MXJhaXJta3J2MHVmdA==" target="_blank" class="footer__social-link">
                             <i class="bx bxl-instagram footer__social-icon"></i>
                         </a>
                     </li>
