--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Vinit Kumar – Pharm D undergraduate offering medical counseling, writing, and pharmacy guidance services. Contact for expert health support and medical education." />
+
 
     <!--=============== FAVICON ===============-->
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/img/vinit.png>
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/vinit.png>
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/img/vinit.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/vinit.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/vinit.png">
     <link rel="manifest" href="assets/favicons/site.webmanifest">
     <link rel="mask-icon" href="assets/favicons/safari-pinned-tab.svg" color="#5bbad5">
@@ -16,16 +18,26 @@
     <meta name="msapplication-config" content="assets/favicons/browserconfig.xml">
     <meta name="theme-color" content="#a789d4">
 
+    <!--seo tags for better optimization -->
+     <!--=============== OPEN GRAPH / SOCIAL ===============-->
+  <meta property="og:title" content="Vinit Kumar | Doctor of Pharmacy | Medical Counseling & Writing" />
+  <meta property="og:description" content="Pharm D undergraduate offering medical counseling, writing, and pharmacy guidance services." />
+  <meta property="og:image" content="assets/img/vinit.png" />
+  <meta property="og:url" content="https://vinit-portfolio-gamma.vercel.app/" />
+  <meta property="og:type" content="website" />
+
     <!--=============== BOXICONS ===============-->
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
 
     <!--=============== SWIPER CSS ===============-->
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
+    <link rel="icon" href="assets/img/vinit_profile-removebg-preview.webp">
 
     <!--=============== CSS ===============-->
     <link rel="stylesheet" href="assets/css/styles.css">
 
-    <title> Vinit Kumar </title>
+    <title>Vinit Kumar | Doctor of Pharmacy | Medical Counseling & Writing</title>
+
 </head>
 
 <body>
@@ -88,7 +100,7 @@
                     </div>
 
                 <div class="home__handle">
-                    <img src="assets/img/vinit_profile-removebg-preview.png" alt="" class="home__img">
+                    <img src="assets/img/vinit_profile-removebg-preview.webp" alt="" class="home__img">
                 </div>
 
                 <div class="home__social">
@@ -113,7 +125,7 @@
                 <span class="section__subtitle">My Intro</span>
                 <h2 class="section__title">About Me</h2>
                 <div class="about__container container grid">
-                    <img src="assets/img/vinit_1.jpg" alt="" class="about__img">
+                    <img src="assets/img/vinit_1.webp" alt="" class="about__img">
                     <div class="about__data">
                         <div class="about__info">
                             <div class="about__box">
@@ -410,18 +422,18 @@
                         <div class="contact__card">
                             <i class="bx bx-mail-send contact__card-icon"></i>
                             <h3 class="contact__card-title">Email</h3>
-                            <span class="contact__card-data">chorapaala74@gmail.com</span>
-                            <a href="mailto:chorapaala74@gmail.com" target="_blank" class="contact__button">
+                            <span class="contact__card-data">vinitk8245@gmail.com</span>
+                            <a href="mailto:vinitk8245@gmail.com" target="_blank" class="contact__button">
                                 Write Me
                                 <i class="bx bx-right-arrow contact__button-icon"></i>
                             </a>
                         </div>
                         <div class="contact__card">
                             <i class="bx bxl-whatsapp contact__card-icon"></i>
-                            <h3 class="contact__card-title">Whatsapp</h3>
                             <span class="contact__card-data">+91 98972 06061</span>
                             <a href="https://api.whatsapp.com/send?phone=+91 98972 06061&text=Hey there!" target="_blank" class="contact__button">
                                 Write Me
+                            <span
                                 <i class="bx bx-right-arrow contact__button-icon"></i>
                             </a>
                         </div>
@@ -436,7 +448,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="contact__content">
+                <!-- <div class="contact__content">
                     <h3 class="contact__title contact__title-form">Write Me your Message</h3>
                     <form action="" class="contact__form">
                         <div class="contact__form-div">
@@ -462,7 +474,7 @@
                             Send Message
                         </button>
                     </form>
-                </div>
+                </div> -->
             </section>
     </main>
 
